# legal-chat

./: .gitignore  README.md  Todo.md  pyproject.toml
.devcontainer/: devcontainer.json
app/: server.py
