[tool.poetry]
name = "legal-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
langserve = {extras = ["server"], version = ">=0.0.30"}
pydantic = "<2"
rag-chroma = {path = "packages/rag-chroma", develop = true}
langchain = ">=0.0.325"
openai = "<2"
tiktoken = ">=0.5.1"
chromadb = ">=0.4.14"
googletrans = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
