[tool.poetry]
name = "legal-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.23.2"
pydantic = "<2"
langchain = ">=0.0.325"
openai = "<2"
tiktoken = ">=0.5.1"
chromadb = ">=0.4.14"
googletrans = ">=4.0.0-rc1"
pysqlite3-binary = ">=0.5.2.post2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
